--- a/features/news/src/main/res/layout/fragment_news.xml
+++ b/features/news/src/main/res/layout/fragment_news.xml
@@ -2,14 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:viewBindingIgnore="true">
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/current_time_text_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Home Fragment"
+        android:text="News Fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
