--- a/navigation/src/main/res/navigation/main_navigation_graph.xml
+++ b/navigation/src/main/res/navigation/main_navigation_graph.xml
@@ -6,10 +6,15 @@
 
     <fragment
         android:id="@+id/home_fragment"
-        android:name="kz.oceandance.superapp.home.HomeFragment" />
+        android:name="kz.oceandance.home.HomeFragment">
+
+        <action
+            android:id="@+id/action_home_fragment_to_news_fragment"
+            app:destination="@id/news_fragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/news_fragment"
-        android:name="kz.oceandance.superapp.news.NewsFragment" />
+        android:name="kz.oceandance.news.NewsFragment" />
 
 </navigation>
