--- a/app/src/main/res/menu/main_navigation_menu.xml
+++ b/app/src/main/res/menu/main_navigation_menu.xml
@@ -2,12 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/news_fragment"
-        android:icon="@drawable/ic_news"
-        android:title="News Fragment" />
+        android:id="@+id/home_navigation"
+        android:icon="@drawable/ic_home"
+        android:title="Home Fragment" />
 
     <item
-        android:id="@+id/home_fragment"
-        android:title="Home Fragment" />
+        android:id="@+id/news_navigation"
+        android:icon="@drawable/ic_news"
+        android:title="News Fragment" />
 
 </menu>
