--- a/features/news/src/main/res/layout/fragment_news_detail.xml
+++ b/features/news/src/main/res/layout/fragment_news_detail.xml
@@ -4,13 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/next_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/current_time_text_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="News Detail Fragment"
         android:gravity="center"
-        android:padding="12dp"
-        android:text="News Fragment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
