--- a/features/main/src/main/res/menu/main_navigation_menu.xml
+++ b/features/main/src/main/res/menu/main_navigation_menu.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/home_navigation"
         android:icon="@drawable/ic_home"
-        android:title="Home Fragment" />
+        android:title="@string/home_title" />
 
     <item
         android:id="@+id/news_navigation"
         android:icon="@drawable/ic_news"
-        android:title="News Fragment" />
+        android:title="@string/news_title" />
 
 </menu>
