--- a/features/news/src/main/res/navigation/news_nav_graph.xml
+++ b/features/news/src/main/res/navigation/news_nav_graph.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/news_navigation"
     app:startDestination="@id/news_fragment">
 
     <fragment
         android:id="@+id/news_fragment"
-        android:name="kz.oceandance.news.list.NewsFragment">
+        android:name="kz.oceandance.news.list.NewsFragment"
+        android:label="News"
+        tools:layout="@layout/fragment_news">
 
         <action
             android:id="@+id/action_news_fragment_to_news_nav_graph"
